--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     <button class="k drum">k</button>
     <button class="l drum">l</button>
   </div>
-
   <footer>
-    Completed from Dr. Angela Yu Course | Made with in London.
+    Completed from Dr. Angela Yu Course | Remade in India.
   </footer>
   <script src="index.js"></script>
 </body>
